# townpass-microservice

./: README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
TownPass/: pubspec.yaml
TownPass/android/app/src/main/: AndroidManifest.xml
TownPass/lib/: main.dart
TownPass/lib/page/city_service/model/: my_service_model.dart
TownPass/lib/service/: background_notification_service.dart  construction_alert_service.dart
TownPass/lib/util/tp_web_message_handler/: watch_message_handler.dart
TownPass/lib/util/web_message_handler/: tp_web_message_handler.dart  tp_web_message_listener.dart
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/versions/: 0a7edeccd9e3_add_road_segments_table.py  106813781e8f_add_consrtuct_notice.py  1cffabff820a_add_default_user.py  bd7c76480677_add_date_range_to_construction_notices.py  c0d182a9159f_change_id_type.py  fb96429bf303_add_user_favorite.py
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routers/: api.py  websocket.py
backend/app/services/: construction_scraper.py  notice_contruction.py
backend/data/: construction.geojson
backend/scripts/: init_default_user.py  load_road_segments.py
frontend/public/mapData/: attraction_tpe.geojson
frontend/src/: style.css
frontend/src/components/: Home.vue  MapView-sorted.vue  MapView.vue  RoadWatch.vue  TopTabs.vue
frontend/src/components/map/: MapPopup.vue
frontend/src/config/: fieldMapping.json
frontend/src/service/: api.js
