[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "alembic==1.17.1",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "apscheduler>=3.11.1",
    "asn1crypto==1.5.1",
    "attrs==25.4.0",
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "cloud-sql-python-connector==1.18.5",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "dnspython==2.8.0",
    "fastapi[all]==0.120.1",
    "frozenlist==1.8.0",
    "google-auth==2.42.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "multidict==6.7.0",
    "pg8000==1.31.5",
    "propcache==0.4.1",
    "psycopg==3.2.12",
    "psycopg-binary==3.2.12",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.11.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rsa==4.9.1",
    "scramp==1.4.6",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "yarl==1.22.0",
]
